[gd_scene load_steps=2 format=3 uid="uid://cqcx56j5ggdj5"]

[ext_resource type="Script" path="res://scenes/chat.gd" id="1_7s13l"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7s13l")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PROFILELABEL" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.003
anchor_top = 0.004
anchor_right = 0.221
anchor_bottom = 0.064
theme_override_font_sizes/font_size = 30
text = "USER PROFILE"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="profile" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.083
anchor_right = 0.223
anchor_bottom = 0.344
metadata/_edit_use_anchors_ = true

[node name="email" type="RichTextLabel" parent="profile"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00909091
anchor_top = 0.639847
anchor_right = 0.986364
anchor_bottom = 0.804598
theme_override_font_sizes/normal_font_size = 30
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="name" type="RichTextLabel" parent="profile"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00454545
anchor_top = 0.808429
anchor_right = 1.0
anchor_bottom = 0.996169
theme_override_font_sizes/normal_font_size = 30
scroll_active = false
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="CHATROOMSLABEL" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.003
anchor_top = 0.348
anchor_right = 0.221
anchor_bottom = 0.408
theme_override_font_sizes/font_size = 30
text = "CHATROOMS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="chatrooms" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_top = 0.409
anchor_right = 0.222
anchor_bottom = 0.623
theme_override_font_sizes/font_size = 30
metadata/_edit_use_anchors_ = true

[node name="chat" type="ItemList" parent="."]
layout_mode = 0
anchor_left = 0.2255
anchor_top = 0.008
anchor_right = 0.993
anchor_bottom = 0.897
theme_override_colors/guide_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 30
allow_search = false
metadata/_edit_use_anchors_ = true

[node name="messege" type="LineEdit" parent="."]
layout_mode = 0
anchor_left = 0.2245
anchor_top = 0.907
anchor_right = 0.915
anchor_bottom = 0.987
theme_override_font_sizes/font_size = 30
placeholder_text = "ENTER MESSEGE"
metadata/_edit_use_anchors_ = true

[node name="nickname" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.009
anchor_top = 0.696
anchor_right = 0.22
anchor_bottom = 0.778
theme_override_font_sizes/font_size = 30
placeholder_text = "NICKNAME"
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="send" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.92
anchor_top = 0.907
anchor_right = 0.993
anchor_bottom = 0.985
theme_override_font_sizes/font_size = 30
text = "SEND"
metadata/_edit_use_anchors_ = true

[node name="update" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0475
anchor_top = 0.825
anchor_right = 0.1935
anchor_bottom = 0.894
theme_override_font_sizes/font_size = 30
text = "UPDATE NICKNAME"
metadata/_edit_use_anchors_ = true

[node name="refresh" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.914
anchor_right = 0.1975
anchor_bottom = 0.979
theme_override_font_sizes/font_size = 30
text = "REFRESH ALL"
metadata/_edit_use_anchors_ = true

[connection signal="item_activated" from="chatrooms" to="." method="_on_chatrooms_item_activated"]
[connection signal="pressed" from="send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="update" to="." method="_on_update_pressed"]
[connection signal="pressed" from="refresh" to="." method="_on_refresh_pressed"]
